hibernate: add StatelessSession support
- Add statless session support to TransactialRequest

```java
{
   use(new TransactionalRequest().useStatelessSession);
}
```

fix #3572